monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: kind-prometheus-grafana
            port:
              number: 80

      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: kind-prometheus-kube-prome-prometheus
            port:
              number: 9090
